--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="style.css">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+        integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-  <div class="wrapper">
     <div class="headingMain">
         <p>Tic Tac Toe</p>
     </div>
     <div class="container">
-        <div class="boxes box1" ></div>
+        <div class="boxes box1"></div>
         <div class="boxes box2"></div>
         <div class="boxes box3"></div>
         <div class="boxes box4"></div>
@@ -39,11 +40,10 @@
             <button class="btn"><i class="fa-sharp fa-solid fa-o"></i></button>
         </div>
     </div>
-  </div>
-  <div class="gameOverDiv">
-    <p id="result">Player 1 won</p>
-    <button id="restart">Restart</button>
-  </div>
+    <div class="gameOverDiv">
+        <p id="result">Player 1 won</p>
+        <button id="restart">Restart</button>
+    </div>
     <script src="./app.js"></script>
 </body>
 
